--- a/src/Styles/nameIsValue.scss
+++ b/src/Styles/nameIsValue.scss
@@ -1,3 +1,15 @@
 .flex {
     display: flex;
 }
+
+.inline {
+    display: inline;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
+.floatLeft {
+    float: left;
+}
