--- a/src/Styles/search.scss
+++ b/src/Styles/search.scss
@@ -1,68 +1,54 @@
-@import './colors.scss';
+@import "./colors.scss";
 
 #search {
-    .wapper__search {
-        width: 100%;
-        height: 40px;
-        padding-left: 10px;
-        border: 1px solid $color-moongo;
+  .wapper__search {
+    width: 100%;
+    height: 40px;
+    padding-left: 10px;
+    border: 1px solid $color-moongo;
 
-        input {
-            width: 100%;
-            height: 38px;
-            border: 0;
-            padding: 0;
-            &:focus { outline: none; }
-        }
-
+    input {
+      width: 100%;
+      height: 38px;
+      border: 0;
+      padding: 0;
+      &:focus {
+        outline: none;
+      }
     }
-    .search-button {
-        width: 40px;
-        height: 40px;
-        background-color: $color-moongo;
-    }
+  }
+  .search-button {
+    width: 40px;
+    height: 40px;
+    background-color: $color-moongo;
+  }
 
-    > form {
-      display: flex;
-
-    }
+  > form {
+    display: flex;
+  }
 }
 
 .container-quick-search {
-    font-size: 12px;
-    display: flex;
-    padding: 4px 0 8px;
+  position: relative;
+  font-size: 12px;
+  display: flex;
+  padding: 4px 0 8px;
 
-    &__list {
-        display: flex;
-        margin: 0 auto;
-        li {
-            padding: 0 6px;
-            &:first-child {
-                padding-left: 0;
-            }
-            border-right: 1px solid grey;
-            &:last-child {
-                border-right: 0;
-            }
-        }
+  &__buttons {
+    position: absolute;
+    right: 0;
+    button {
+      background-color: white;
+      width: 15px;
+      height: 15px;
+      border: 1px solid gray;
+      border-right: 0;
+    }
+    .prev {
     }
 
-    &__buttons {
-        button {
-            background-color: white;
-            width: 15px;
-            height: 15px;
-            border: 1px solid gray;
-            border-right: 0;
-        }
-        .prev {
-        }
-
-        .next {
-            border-right: 1px solid gray;
-
-        }
+    .next {
+      border-right: 1px solid gray;
     }
-
+  }
 }
