--- a/src/Styles/Events/index.scss
+++ b/src/Styles/Events/index.scss
@@ -1,40 +1,45 @@
-@import './colors.scss';
+@import "./colors.scss";
 
-.webcome_main_evnet_height {
-    $width: 700px;
-    height: 370px;
-    width: $width;
+.wapper-welcome-main-event {
+  padding: 40px 0;
+}
 
-    .welcome-main-event-viewer-container {
-        
-    }
+.welcome-main-event {
+  $max-width: 700px;
+  $margin-right: 10px;
 
-    .item-list {
+  height: 370px;
+
+  width: calc(#{$max-width} - #{$margin-right});
+  margin-right: $margin-right;
+
+  .item-list {
+    width: 100%;
+    height: 40px;
+    display: flex;
+
+    li {
+      width: 100px;
+      button {
         width: 100%;
         height: 40px;
-        display: flex;
+        display: block;
+        border: 1px solid #d7d7d7;
+        border-right: 0;
 
-        li {
-            width:100px;
-            button {
-                width: 100%;
-                height: 40px;
-                display: block;
-                border: 1px solid #000;
-                border-right: 0;
+        font-size: 12px;
+        font-weight: bold;
 
-                font-size: 12px;
-                font-weight: bold;
-
-                cursor: pointer;
-                &.on {
-                    background-color: $color-moongo;
-                    color: white;
-                }
-            }
-            &:last-child button {
-                border-right: 1px solid #000;
-            }
+        cursor: pointer;
+        &.on {
+          background-color: $color-moongo;
+          color: white;
         }
+      }
+
+      &:last-child button {
+        border-right: 1px solid #d7d7d7;
+      }
     }
+  }
 }
