--- a/src/Styles/headerNavBar.scss
+++ b/src/Styles/headerNavBar.scss
@@ -1,169 +1,162 @@
-@import './icons.scss';
-@import './colors.scss';
+@import "./icons.scss";
+@import "./colors.scss";
 
+$header-navbar-background-color: #606d9a;
+
+.wapper-header__navbar {
+  background-color: $header-navbar-background-color;
+}
 .header__navbar {
-    height: 50px;
+  height: 50px;
+  display: flex;
+
+  background-color: $header-navbar-background-color;
+
+  a {
     display: flex;
-    $color1: #606d9a;
-    background-color: $color1;
+    padding: 0 10px;
+    height: 100%;
+    align-items: center;
+    color: white;
+    font-weight: 600;
 
-    
-    a {
-        display: flex;
-        padding: 0 10px;
-        height: 100%;
-        align-items: center;
-        color: white;
-        font-weight: 600;
-
-        &:hover {
-            opacity: 0.7;
-        }
+    &:hover {
+      opacity: 0.7;
     }
-    .all-category {
-        width: 50px;
-        background-color: #373f64;
-        button {
-            background-size: 50px 50px;
-            height: 100%;
-            width: 100%;
-        }
-        .menu {
-            background-color: white;
-            height: 50px;
-            @include menu_main;
-        }
-        .menu.on {
-            background-color: white;
-            height: 50px;
-            @include menu_x(white);
-        }
-
-        &.on {
-            
-        }
+  }
+  .all-category {
+    width: 50px;
+    background-color: #373f64;
+    button {
+      background-size: 50px 50px;
+      height: 100%;
+      width: 100%;
     }
+    .menu {
+      background-color: white;
+      height: 50px;
+      @include menu_main;
+    }
+    .menu.on {
+      background-color: white;
+      height: 50px;
+      @include menu_x(white);
+    }
+
+    &.on {
+    }
+  }
 }
 
 .all-category-menu {
-    $color1: #1e326e;
-    $color2: #dadada;
+  $color1: #1e326e;
+  $color2: #dadada;
 
-    background-color: white;
-    position: absolute;
-    display: flex;
-    border: 1px solid $color1;
-    z-index: 1;
+  background-color: white;
+  position: absolute;
+  display: flex;
+  border: 1px solid $color1;
+  z-index: 1;
 
-    &__list {
+  &__list {
+    li {
+      border-right: 1px solid $color2;
+      border-top: 1px solid $color2;
+      width: 150px;
+      height: 50px;
+      &:first-child {
+        border-top: 0;
+      }
+      &:last-child {
+        border-bottom: 1px solid $color2;
+      }
 
-        li {
-            border-right: 1px solid $color2;
-            border-top: 1px solid $color2;
-            width: 150px;
-            height: 50px;
-            &:first-child {
-                border-top: 0;
-            }
-            &:last-child {
-                border-bottom: 1px solid $color2;
-            }
-
-            button {
-                position: relative;
-                cursor: pointer;
-                font-size: 14px;
-                font-weight: 600;
-                display: block;
-                text-align: left;
-                padding-left: 10px;
-                width: 100%;
-                height: 100%;
-                &.on {
-                    background-color: $color1;
-                    color: #fff;
-                    &::after{
-                        content: ' ';
-                        right: 4px;
-                        display: inline-block;
-                        position: absolute;
-                        width: 14px;
-                        height: 14px;
-                        height: 100%;
-                        top: 0;
-                        @include chevron-right(#fff);
-                        
-                    }
-
-                    
-                }
-            }
+      button {
+        position: relative;
+        cursor: pointer;
+        font-size: 14px;
+        font-weight: 600;
+        display: block;
+        text-align: left;
+        padding-left: 10px;
+        width: 100%;
+        height: 100%;
+        &.on {
+          background-color: $color1;
+          color: #fff;
+          &::after {
+            content: " ";
+            right: 4px;
+            display: inline-block;
+            position: absolute;
+            width: 14px;
+            height: 14px;
+            height: 100%;
+            top: 0;
+            @include chevron-right(#fff);
+          }
         }
+      }
     }
+  }
 
-    &__sub-list {
-
-    }
+  &__sub-list {
+  }
 }
 
 .sub-category {
-    padding: 10px;
-    font-size: 12px;
-    background-color: white;
+  padding: 10px;
+  font-size: 12px;
+  background-color: white;
+  color: $color-gray-text;
+
+  .title {
+    position: relative;
+    margin-bottom: 10px;
+
+    a {
+      // color: $color-gray-text;
+      font-weight: bold;
+      padding: 4px 12px;
+      color: #333;
+      display: block;
+    }
+
+    &::before {
+      content: " ";
+      height: 100%;
+      width: 4px;
+      background-color: $color-moongo;
+      position: absolute;
+    }
+  }
+  &__list_container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 400px;
+    height: 310px;
     color: $color-gray-text;
 
+    ul {
+      width: 110px;
+      padding-bottom: 20px;
 
-    .title {
-        position: relative;
-        margin-bottom: 10px;
-
+      li {
         a {
-            // color: $color-gray-text;
-            font-weight: bold;
-            padding: 4px 12px;
-            color: #333;
-            display: block;
+          color: $color-gray-text;
+          padding: 4px 5px;
+          display: block;
+
+          &.bold {
+            color: red;
+          }
         }
-        
-        &::before {
-            content: ' ';
-            height: 100%;
-            width: 4px;
-            background-color: $color-moongo;
-            position: absolute;
+        &:hover {
+          background-color: $color-select-gray-block;
         }
+      }
     }
-    &__list_container {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        justify-content: flex-start;
-        width: 400px;
-        height: 310px;
-        color: $color-gray-text;
-
-        
-        ul {
-            width:110px;
-            padding-bottom: 20px;
-
-            li {
-                a {
-                    color: $color-gray-text;
-                    padding: 4px 5px;
-                    display: block;
-                    
-                    &.bold {
-                        color: red;
-                    }
-                }
-                &:hover {
-                    background-color: $color-select-gray-block;
-                }
-            }
-
-    
-        }
-
-    }
+  }
 }
