update stick-list style

--- a/src/Styles/footer.scss
+++ b/src/Styles/footer.scss
@@ -52,4 +52,9 @@ footer {
       line-height: 18px;
     }
   }
+
+  ul.stick-list li::before {
+    background-color: #ddd;
+    margin-top: -4px;
+  }
 }
