--- a/src/Styles/buttons.scss
+++ b/src/Styles/buttons.scss
@@ -70,7 +70,23 @@ button.mini {
     @include arrow_sans_left-after(#888, 10px);
   }
 
-  &.bannerPrev + .bannerNext {
+  &.bannerPrev+.bannerNext {
     border-left: 0;
+  }
+
+  &.blue1 {
+    background-image: none;
+    background-color: #5e6b9f !important;
+    border: 1px solid #5e6b9f;
+    color: #fff !important;
+    box-shadow: none;
+  }
+
+  &.blue2 {
+    background-image: none;
+    background-color: #7b8ed1 !important;
+    border: 1px solid #7b8ed1;
+    color: #fff !important;
+    box-shadow: none;
   }
 }
