--- a/src/Styles/Events/index.scss
+++ b/src/Styles/Events/index.scss
@@ -1,4 +1,5 @@
 @import "./colors.scss";
+@import './welcomes.scss';
 
 .wapper-welcome-main-event {
   padding: 40px 0;
@@ -20,6 +21,7 @@
 
     li {
       width: 100px;
+
       button {
         width: 100%;
         height: 40px;
@@ -31,6 +33,7 @@
         font-weight: bold;
 
         cursor: pointer;
+
         &.on {
           background-color: $color-moongo;
           color: white;
