--- a/src/Styles/input.scss
+++ b/src/Styles/input.scss
@@ -1,5 +1,10 @@
 @import "./colors.scss";
 
+input {
+  border: 0;
+  border: 1px solid $color-border-main;
+}
+
 .input.mini {
   .box {
     // margin: 100px auto;
