add gatagory event style

--- a/src/Styles/Events/index.scss
+++ b/src/Styles/Events/index.scss
@@ -1,5 +1,6 @@
 @import "./colors.scss";
 @import './welcomes.scss';
+@import './categoryEventSlier.scss';
 
 .wapper-welcome-main-event {
   padding: 40px 0;
