--- a/src/Styles/headerNavBar.scss
+++ b/src/Styles/headerNavBar.scss
@@ -5,46 +5,62 @@ $header-navbar-background-color: #606d9a;
 
 .wapper-header__navbar {
   background-color: $header-navbar-background-color;
+
+  &.stiky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+  }
 }
+
 .header__navbar {
   height: 50px;
   display: flex;
-
   background-color: $header-navbar-background-color;
 
-  a {
+  &__nav {
     display: flex;
-    padding: 0 10px;
-    height: 100%;
-    align-items: center;
-    color: white;
-    font-weight: 600;
 
-    &:hover {
-      opacity: 0.7;
+    a {
+      width: 80px;
+      display: flex;
+      padding: 0 10px;
+      height: 100%;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-weight: 600;
+
+      &:hover {
+        opacity: 0.7;
+      }
     }
   }
+
   .all-category {
     width: 50px;
     background-color: #373f64;
+
     button {
       background-size: 50px 50px;
       height: 100%;
       width: 100%;
     }
+
     .menu {
       background-color: white;
       height: 50px;
       @include menu_main;
     }
+
     .menu.on {
       background-color: white;
       height: 50px;
       @include menu_x(white);
     }
 
-    &.on {
-    }
+    &.on {}
   }
 }
 
@@ -64,9 +80,11 @@ $header-navbar-background-color: #606d9a;
       border-top: 1px solid $color2;
       width: 150px;
       height: 50px;
+
       &:first-child {
         border-top: 0;
       }
+
       &:last-child {
         border-bottom: 1px solid $color2;
       }
@@ -81,9 +99,11 @@ $header-navbar-background-color: #606d9a;
         padding-left: 10px;
         width: 100%;
         height: 100%;
+
         &.on {
           background-color: $color1;
           color: #fff;
+
           &::after {
             content: " ";
             right: 4px;
@@ -100,8 +120,7 @@ $header-navbar-background-color: #606d9a;
     }
   }
 
-  &__sub-list {
-  }
+  &__sub-list {}
 }
 
 .sub-category {
@@ -130,6 +149,7 @@ $header-navbar-background-color: #606d9a;
       position: absolute;
     }
   }
+
   &__list_container {
     display: flex;
     flex-wrap: wrap;
@@ -153,6 +173,7 @@ $header-navbar-background-color: #606d9a;
             color: red;
           }
         }
+
         &:hover {
           background-color: $color-select-gray-block;
         }
