add event other books

--- a/src/Styles/Events/index.scss
+++ b/src/Styles/Events/index.scss
@@ -1,6 +1,7 @@
 @import "./colors.scss";
 @import './welcomes.scss';
 @import './categoryEventSlier.scss';
+@import './slideBook.scss';
 
 .wapper-welcome-main-event {
   padding: 40px 0;
