--- a/src/Styles/Events/slideBook.scss
+++ b/src/Styles/Events/slideBook.scss
@@ -8,7 +8,22 @@
         background: no-repeat url('/assets/images/book_cover.png');
         background-size: contain;
 
+        a {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
 
-        img {}
+
+        img {
+            width: 100%;
+            height: 100%;
+            padding-top: 4px;
+            transition: transform .4s ease-in;
+
+            &:hover {
+                transform: rotateY(-27deg) skew(0deg, 5deg) translateX(-6px) translateY(5px)
+            }
+        }
     }
 }
