--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -17,6 +17,7 @@
 @import "./bookPage.scss";
 @import "./nameIsValue.scss";
 @import "./input.scss";
+@import "./Slider/index.scss";
 
 @import "./Events/index.scss";
 
