--- a/src/Styles/Events/slideBook.scss
+++ b/src/Styles/Events/slideBook.scss
@@ -2,10 +2,9 @@
 
 .event-book-card {
     &__cover {
-
         width: 100px;
         height: 150px;
-        background: no-repeat url('/assets/images/book_cover.png');
+        background: no-repeat url("/assets/images/book_cover.png");
         background-size: contain;
 
         a {
@@ -14,16 +13,18 @@
             height: 100%;
         }
 
-
         img {
             width: 100%;
             height: 100%;
             padding-top: 4px;
-            transition: transform .4s ease-in;
+            transition: transform 0.4s ease-in;
+            position: absolute;
+            transform-style: flat;
 
             &:hover {
-                transform: rotateY(-27deg) skew(0deg, 5deg) translateX(-6px) translateY(5px)
+                transform: rotateY(-27deg) skew(0deg, 5deg) translateX(-6px) translateY(5px); // transform: skew(0deg, 5deg);
             }
+
         }
     }
 }
