--- a/src/Styles/Slider/slider3d.scss
+++ b/src/Styles/Slider/slider3d.scss
@@ -1,1 +1,42 @@
-.slider3d {}
+.slider3d {
+  .container {
+    width: 500px;
+    height: 150px;
+  }
+
+  .list {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    perspective: 1000px;
+    transform-style: preserve-3d;
+  }
+
+  .item {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 100px;
+
+    &:nth-child(1) {
+      transform: translate3d(0, 0, 0);
+    }
+
+    &:nth-child(2) {
+      transform: translate3d(50%, 0, -100px);
+    }
+
+    &:nth-child(3) {
+      transform: translate3d(100%, 0, -200px);
+    }
+
+    &:nth-child(4) {
+      transform: translate3d(-100%, 0, -200px);
+    }
+
+    &:nth-child(5) {
+      transform: translate3d(-50%, 0, -100px);
+    }
+  }
+}
