--- a/src/Styles/Slider/slider3d.scss
+++ b/src/Styles/Slider/slider3d.scss
@@ -18,25 +18,28 @@
     right: 0;
     margin: 0 auto;
     width: 100px;
+    background-color: white;
+    transition: all 0.5s;
+    box-shadow: 2px 5px 10px -3px rgba(0, 0, 0, 0.62);
 
-    &:nth-child(1) {
-      transform: translate3d(0, 0, 0);
-    }
+    // &:nth-child(1) {
+    //   transform: translate3d(0, 0, 0);
+    // }
 
-    &:nth-child(2) {
-      transform: translate3d(50%, 0, -100px);
-    }
+    // &:nth-child(2) {
+    //   transform: translate3d(50%, 0, -100px);
+    // }
 
-    &:nth-child(3) {
-      transform: translate3d(100%, 0, -200px);
-    }
+    // &:nth-child(3) {
+    //   transform: translate3d(100%, 0, -200px);
+    // }
 
-    &:nth-child(4) {
-      transform: translate3d(-100%, 0, -200px);
-    }
+    // &:nth-child(4) {
+    //   transform: translate3d(-100%, 0, -200px);
+    // }
 
-    &:nth-child(5) {
-      transform: translate3d(-50%, 0, -100px);
-    }
+    // &:nth-child(5) {
+    //   transform: translate3d(-50%, 0, -100px);
+    // }
   }
 }
