--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -23,6 +23,7 @@
 
 html {
   font-size: 16px;
+  width: 100%;
 }
 
 body {
@@ -102,4 +103,12 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+}
+
+
+
+@for $i from 0 through 10 {
+  .w#{$i*10} {
+    width: #{$i * 10}#{'%'} !important;
+  }
 }
