--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -1,4 +1,5 @@
 @import "./reset.scss";
+@import "./app.scss";
 @import "./header.scss";
 @import "./topBannerContainer.scss";
 @import "./search.scss";
