슬라이더 크롤링 추가

--- a/src/Styles/Slider/slider3d.scss
+++ b/src/Styles/Slider/slider3d.scss
@@ -46,3 +46,16 @@
   }
 
 }
+
+.slider3d-controller {
+  .left-right {
+    .left {
+      width: 100%;
+    }
+
+    .right {
+      min-width: 360px;
+    }
+  }
+
+}
