--- a/src/Styles/box.scss
+++ b/src/Styles/box.scss
@@ -60,6 +60,22 @@
       @include section-title();
     }
 
+    // .section-contents {
+    //   position: absolute;
+    //   top: 40px;
+    //   width: 100%;
+    // }
+
+    .section-contents {
+      position: absolute;
+      top: 40px;
+      width: 100%;
+
+      &.border {
+        border: 1px solid #8885a0;
+      }
+    }
+
     .list-container {
       position: absolute;
       top: 40px;
@@ -100,7 +116,39 @@
       }
     }
   }
+
+  .footer {
+    position: absolute;
+    width: 100%;
+    background: url("/assets/images/bg/bg_blue01.png");
+    bottom: 0;
+    color: white;
+
+    .layer {
+      padding: 15px;
+
+      >div {
+        display: inline;
+        vertical-align: middle;
+      }
+
+      .title {
+        a {
+          color: white;
+        }
+
+        font-size: 14px;
+      }
+
+      .author {
+        margin-left: 15px;
+        font-size: 11px;
+      }
+    }
+  }
 }
+
+// 박스 끝
 
 .box-welcome1 {}
 
@@ -139,49 +187,19 @@
     width: 100%;
     border: 1px solid #8885a0;
   }
+}
 
-  .left-right {
-    overflow: hidden;
-    display: flex;
-    align-items: center;
+.left-right {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
 
-    >div {
-      float: left;
-      width: 50%;
-    }
-
-    .right {
-      border-left: 1px solid #8885a0;
-    }
+  >div {
+    float: left;
+    width: 50%;
   }
 
-  .footer {
-    position: absolute;
-    width: 100%;
-    background: url("/assets/images/bg/bg_blue01.png");
-    bottom: 0;
-    color: white;
-
-    .layer {
-      padding: 15px;
-
-      >div {
-        display: inline;
-        vertical-align: middle;
-      }
-
-      .title {
-        a {
-          color: white;
-        }
-
-        font-size: 14px;
-      }
-
-      .author {
-        margin-left: 15px;
-        font-size: 11px;
-      }
-    }
+  .right {
+    border-left: 1px solid #8885a0;
   }
 }
