--- a/src/Styles/colors.scss
+++ b/src/Styles/colors.scss
@@ -3,3 +3,4 @@ $color-gray-text: #555;
 $color-select-gray-block: #eee;
 $color-moongo: #606d9a;
 $color-border-main: #dadada;
+$color-border-3dslider: #8885a0;
