--- a/src/Styles/goodsCard.scss
+++ b/src/Styles/goodsCard.scss
@@ -89,3 +89,66 @@
     }
   }
 }
+
+.card1 {
+  $border-size-normal: 1px;
+  $border-size-on: 5px;
+
+  cursor: pointer;
+  float: left;
+  width: 110px;
+  height: 260px;
+  // padding: 25px 10px 12px;
+  position: relative;
+  border: $border-size-normal solid #dadada;
+  background-color: #fff;
+  transition: border-color 0.2s linear;
+
+  &:nth-child(3) {
+    margin-right: 0;
+  }
+
+  // &:hover,
+  // &.on {
+  //   border: $border-size-on solid #5e6b9e;
+  //   padding: calc(25px - #{$border-size-on} + #{$border-size-normal}) 6px 12px;
+  // }
+
+  &__cover {
+    text-align: center;
+    left: 0;
+    width: 100%;
+    height: 160px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      // width: 125px;
+      // min-width: 125px;
+      // max-height: 185px;
+
+      border: 1px solid #888;
+    }
+  }
+
+  &__contents {
+    padding-top: 10px;
+
+    &__category {
+      text-align: center;
+      color: #333;
+      font-size: 11px;
+      color: #3e74ab;
+      padding: 4px 0;
+    }
+
+    &__title {
+      height: 32px;
+      line-height: 16px;
+      text-align: center;
+      color: #333;
+      font-size: 12px;
+      font-weight: bold;
+    }
+  }
+}
